extra margin to fix overlapping header

--- a/phonegap/Open Food Facts/assets/www/off.css
+++ b/phonegap/Open Food Facts/assets/www/off.css
@@ -17,6 +17,10 @@
 }
 
 
+h1 {
+	margin-top:40px;
+}
+
 a { text-decoration: none;}
 
 a, a:visited { color: blue;}
